# PasswordManager

./: .gitignore  CMakeLists.txt  CMakePresets.json  PasswordManager.cpp  PasswordManager.h  README.md  main.cpp
include/: crypto.cpp
src/: Vault.cpp  Vault.h  crypto.cpp  crypto.h
